# notabena

./: .gitignore  Cargo.toml  README.md  notes.db
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-checks.yml
src/: api.rs  clean.rs  main.rs  note.rs  output.rs  return_to_main.rs  test.rs
src/database/: display.rs  format_md.rs  get_notes.rs  mod.rs
src/prompts/: confirm.rs  input.rs  mod.rs  multiselect.rs  select.rs
src/tests/: api.rs
src/utilities/: cursor_to_origin.rs  display.rs  format_md.rs  mod.rs  truncate_note.rs
