[package]
name = "notabena"
version = "0.1.0-preview"
edition = "2021"
authors = [ "Mart Zielman", "MrSerge01" ]
license-file = "LICENSE.md"
description = "[PREVIEW] A work-in-progress note-taking app for the command line. GUI support will be added (see README)."
homepage = "https://github.com/thatfrogdev/notabena"
repository = "https://github.com/thatfrogdev/notabena"
readme = "README.md"
keywords = [ "notes", "cli", "gui", "markdown" ]
categories = [ "command-line-utilities", "gui", "text-processing" ]

[dependencies]
async-std = "1.12.0"
directories = "5.0.1"
chrono = "0.4.28"
dialoguer = "0.10.4"
inquire = "0.6.2"
crossterm = "0.26.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
