[package]
name = "notabena"
version = "0.1.0"
edition = "2021"
authors = [ "ThatFrogDev", "MrSerge01" ]
license-file = "LICENSE.md"
description = "A note-taking app for the command line. GUI support will be added (see README)."
homepage = "https://github.com/thatfrogdev/notabena"
repository = "https://github.com/thatfrogdev/notabena"
readme = "README.md"
keywords = [ "notes", "cli", "gui", "markdown" ]
categories = [ "command-line-utilities", "gui", "text-processing" ]

[dependencies]
async-std = "1.12.0"
directories = "5.0.1"
chrono = "0.4.31"
dialoguer = "0.11.0"
inquire = "0.6.2"
crossterm = "0.27.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
termimad = "0.29.1"
